INT-14766: Contrast color fix for alerts.

--- a/scss/_core.scss
+++ b/scss/_core.scss
@@ -2857,22 +2857,22 @@ table#user-grades tr.avg td.cell {
     };
     &.alert-info {
         color: $brand-info;
-        background-color: rgba($brand-info, .05);
+        background-color: mix($brand-info, white, 10%);
         border-color: $brand-info;
     };
     &.alert-success {
         color: $brand-success;
-        background-color: rgba($brand-success, .05);
+        background-color: mix($brand-success, white, 5%);
         border-color: $brand-success;
     };
     &.alert-danger {
         color: $brand-danger;
-        background-color: rgba($brand-danger, .05);
+        background-color: mix($brand-danger, white, 5%);
         border-color: $brand-danger;
     };
     &.alert-warning {
         color: $brand-warning;
-        background-color: rgba($brand-warning, .05);
+        background-color: mix($brand-warning, white, 5%);
         border-color: $brand-warning;
     };
 }
